Tool tabs and Old Addons living in perfect harmony #38999

Closed
opened 2014-03-06 17:10:57 +01:00 by Sidney Moraes Jr · 34 comments

Hello,

System Information
Windows

Blender Version
Broken: (example: 2.70 RC1 19f7f9a, see splash screen)
Worked: (optional)

Short description of error
The Tool tabs are amazing, but the old or uncategorized addons, keeps appearing on every tab and making a mess and tabs useless.
I would suggest a simple fix for it: to create a tab for those addons, named custom, general, old, miscellaneous, others or something else. So even old scripts would work great until they migrate to the new UI tags and don't mess with the new ones. I believe its almost impossible to all addons being converted soon, so it sounds a good way to keep the toolbar organized.

Exact steps for others to reproduce the error
Open Blender 2.70 RC1 and import previous settings to get all the addons running

Cheers

Hello, **System Information** Windows **Blender Version** Broken: (example: 2.70 RC1 19f7f9a, see splash screen) Worked: (optional) **Short description of error** The Tool tabs are amazing, but the old or uncategorized addons, keeps appearing on every tab and making a mess and tabs useless. I would suggest a simple fix for it: to create a tab for those addons, named custom, general, old, miscellaneous, others or something else. So even old scripts would work great until they migrate to the new UI tags and don't mess with the new ones. I believe its almost impossible to all addons being converted soon, so it sounds a good way to keep the toolbar organized. **Exact steps for others to reproduce the error** Open Blender 2.70 RC1 and import previous settings to get all the addons running Cheers

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SidneyMoraesJr

Added subscriber: @SidneyMoraesJr

blender/blender-addons#39385 was marked as duplicate of this issue

blender/blender-addons#39385 was marked as duplicate of this issue

#39179 was marked as duplicate of this issue

#39179 was marked as duplicate of this issue

#39544 was marked as duplicate of this issue

#39544 was marked as duplicate of this issue

blender/blender-addons#39024 was marked as duplicate of this issue

blender/blender-addons#39024 was marked as duplicate of this issue
Campbell Barton was assigned by Bastien Montagne 2014-03-06 19:16:12 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @sanctuary

Added subscriber: @sanctuary

◀ Merged tasks: blender/blender-addons#39024.

◀ Merged tasks: blender/blender-addons#39024.

Added subscriber: @bat3a

Added subscriber: @bat3a

+1
i was gonna propose this, switching between tabs gets confusing with the same add-ons settings appear on each one.

+1 i was gonna propose this, switching between tabs gets confusing with the same add-ons settings appear on each one.

Added subscriber: @PawelLyczkowski-1

Added subscriber: @PawelLyczkowski-1

Added subscriber: @willybid-4

Added subscriber: @willybid-4

◀ Merged tasks: #39179.

◀ Merged tasks: #39179.

Added subscriber: @RaphaelStoeckli

Added subscriber: @RaphaelStoeckli

◀ Merged tasks: blender/blender-addons#39385.

◀ Merged tasks: blender/blender-addons#39385.

Added subscriber: @BartekMoniewski

Added subscriber: @BartekMoniewski

+1
I think that is best solution for this problem. For clarity this tab can be just named "Addons" so non experienced users will see easily where their plugins are. Name "Custom" suggest that this tab is somehow created by user, while this can be awesome functionality to have this is beyond of this proposal.

Another benefit for this solution is choice for developers if they really want custom tab for theirs addons or not. Some script are just so small that don't need whole tab. Many addons are just single button that starts operation that can be tweaked in Redo panel, no need to waste vertical space for them.

+1 I think that is best solution for this problem. For clarity this tab can be just named "Addons" so non experienced users will see easily where their plugins are. Name "Custom" suggest that this tab is somehow created by user, while this can be awesome functionality to have this is beyond of this proposal. Another benefit for this solution is choice for developers if they really want custom tab for theirs addons or not. Some script are just so small that don't need whole tab. Many addons are just single button that starts operation that can be tweaked in Redo panel, no need to waste vertical space for them.

Added subscriber: @nikitron

Added subscriber: @nikitron

◀ Merged tasks: #39544.

◀ Merged tasks: #39544.

Added subscriber: @alekulyn

Added subscriber: @alekulyn

I have an idea I'd like to get out. How about defining a new addon preferences field called "Tab" (or something else intuitive) for addons that are in the contrib folder or installed? That is, just not ones that are maintained. This field is, by default, empty, but can be initialized by the addon through bl_category or overwritten by the user's choice.

I have an idea I'd like to get out. How about defining a new addon preferences field called "Tab" (or something else intuitive) for addons that are in the contrib folder or installed? That is, just not ones that are maintained. This field is, by default, empty, but can be initialized by the addon through bl_category or overwritten by the user's choice.

Added subscriber: @00Ghz

Added subscriber: @00Ghz

You mean adding from preferences addons to custom tabs? Sounds good

You mean adding from preferences addons to custom tabs? Sounds good
are in the contrib folder or installed?

that would be painful for users and devs. too, it is already annoying when trying to enable it from the preferences especially the external ones with it's toggle button.

a unified non-categorized tab for the rest of the addons is simple solution and enough as suggested.

so what is taking so long to get a decision here!, if the are any problems with this solution, moderators or UI design guys should act, it has been annoying for many -see how much threads been merged here -

also i don't see it is much of a coding issue, although i'm not suggesting that anyone to dedicate time to it, but taking the decision is the important/hardest step.

``` are in the contrib folder or installed? ``` that would be painful for users and devs. too, it is already annoying when trying to enable it from the preferences especially the external ones with it's toggle button. a unified non-categorized tab for the rest of the addons is simple solution and enough as suggested. so what is taking so long to get a decision here!, if the are any problems with this solution, moderators or UI design guys should act, it has been annoying for many -see how much threads been merged here - also i don't see it is much of a coding issue, although i'm not suggesting that anyone to dedicate time to it, but taking the decision is the important/hardest step.

Added subscriber: @SebastianRothlisberger

Added subscriber: @SebastianRothlisberger
Campbell Barton was unassigned by Bastien Montagne 2014-08-26 14:44:31 +02:00
Bastien Montagne self-assigned this 2014-08-26 14:44:31 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Stealing, this should have been fixed months ago… :/

Stealing, this should have been fixed months ago… :/

This issue was referenced by 3d6ed42c3b

This issue was referenced by 3d6ed42c3bd8a36fca074457271712d56bd4c8e5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3d6ed42c3b.

Closed by commit 3d6ed42c3b.

Added subscriber: @JonathanWilliamson

Added subscriber: @JonathanWilliamson

Good solution @mont29!

Good solution @mont29!

@mont29: thanks man, at last more than 50% of tabs clutter just vanished.

@mont29: thanks man, at last more than 50% of tabs clutter just vanished.
Sign in to join this conversation.
10 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#38999
No description provided.